Fix layout shift on Categories page

--- a/components/CategorySKU/CategorySKU.module.css
+++ b/components/CategorySKU/CategorySKU.module.css
@@ -1,3 +1,8 @@
+.sku {
+  display: flex;
+  flex-direction: column;
+}
+
 .sku img {
   width: 100%;
   height: auto;
@@ -6,7 +11,6 @@
 
 .sku .content {
   padding-top: 2em;
-  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +48,7 @@
 
 @media (min-width: 1024px) {
   .sku {
-    display: flex;
+    flex-direction: row;
   }
 
   .sku.reversed {
@@ -52,9 +56,10 @@
   }
 
   .sku .content,
-  .sku img {
-    flex: 1 0 50%;
+  .sku picture {
+    width: 50%;
   }
+
   .sku .content {
     align-items: flex-start;
   }
